1. Метод .of [#70623 #184671]