@@ -1,6 +1,8 @@
 package ru.job4j.collection;
 
 import org.junit.Test;
+
+import java.util.Arrays;
 import java.util.List;
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.*;
@@ -9,7 +11,7 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed() {
-        List<String> input = List.of("k1/sk1");
+        List<String> input = Arrays.asList("k1/sk1");
         List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
@@ -17,7 +19,7 @@ public class DepartmentsTest {
 
     @Test
     public void whenNonChange() {
-        List<String> input = List.of("k1", "k1/sk1");
+        List<String> input = Arrays.asList("k1", "k1/sk1");
         List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
@@ -25,7 +27,7 @@ public class DepartmentsTest {
 
     @Test
     public void whenSortAsc() {
-        List<String> in = List.of(
+        List<String> input = Arrays.asList(
                 "K2", "K2/SK1", "K2/SK1/SSK1",
                 "K2/SK1/SSK2", "K1", "K1/SK1",
                 "K1/SK1/SSK1", "K1/SK1/SSK2",
@@ -37,13 +39,13 @@ public class DepartmentsTest {
                 "K2/SK1", "K2/SK1/SSK1",
                 "K2/SK1/SSK2"
         );
-        Departments.sortAsc(in);
-        assertThat(in, is(expect));
+        Departments.sortAsc(input);
+        assertThat(input, is(expect));
     }
 
     @Test
     public void whenSortDesc() {
-        List<String> input = List.of(
+        List<String> input = Arrays.asList(
                 "K1", "K1/SK1", "K1/SK1/SSK1",
                 "K1/SK1/SSK2", "K1/SK2", "K2",
                 "K2/SK1", "K2/SK1/SSK1",
@@ -61,7 +63,7 @@ public class DepartmentsTest {
 
     @Test
     public void whenFilledGapsSortedAsc() {
-        List<String> input = List.of(
+        List<String> input = Arrays.asList(
                 "K1/SK1", "K1/SK2", "K1/SK1/SSK1",
                 "K1/SK1/SSK2", "K2", "K2/SK1/SSK1",
                 "K2/SK1/SSK2"
@@ -79,7 +81,7 @@ public class DepartmentsTest {
 
     @Test
     public void whenFilledGapsSortedDesc() {
-        List<String> input = List.of(
+        List<String> input = Arrays.asList(
                 "K1/SK1", "K1/SK2", "K1/SK1/SSK1",
                 "K1/SK1/SSK2", "K2", "K2/SK1/SSK1",
                 "K2/SK1/SSK2"
